# FINAL-YEAR-PROJECT

./: .gitignore  DOCUMENTATION.md  README.md  SOCKET_IO_AND_MESSAGING_GUIDE.txt  SOCKET_IO_IMPLEMENTATION.txt  THESIS_CHAPTER_3_REQUIREMENTS.txt  TOP_SELLING_FEATURE_DOCUMENTATION.txt  about.html  check_image_issues.py  check_missing_images.py  coming-soon.html  debug_db_and_port.py  deployment.txt  edit-product.html  edit-profile.html  index.html  inspect_db.py  login.html  messages.html  migrate_images.py  notifications.html  optimize_db.py  product-detail.html  products.html  profile.html  pyproject.toml  replit.md  requirements.txt  saved-items.html  sell.html  server.py  signup-select-university.html  signup.html  start.bat  start.sh  test_api.py  unimarket.db  update_schema.py  upgrade_db.py  verify_image_api.py
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted--UniMarket-API-Full-Stack-Project-Brief-1-Project-Goal-The-objective-is-to-build-the-ba-1763817710492_1763817710494.txt  content-1763824378740.md
backend/: auth.py  database.py  main.py  models.py  schemas.py
css/: loader.css  products.css  style.css
js/: app.js  products.js
