[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.121.3",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.4",
    "pyjwt>=2.10.1",
    "python-engineio>=4.12.3",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "python-socketio>=5.14.3",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
